prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__append_select_nested.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nselect { customer_id, invoice_id, invoice_date }\nappend (\n  from employees\n  select { employee_id, employee_id, birth_date }\n)\nappend (\n  from invoice_items\n  select { invoice_line_id, invoice_id, null }\n)\nselect { invoice_date, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_nested.prql
---
WITH table_0 AS (
  SELECT
    birth_date,
    employee_id
  FROM
    employees
),
table_1 AS (
  SELECT
    invoice_line_id,
    invoice_id,
    NULL
  FROM
    invoice_items
)
SELECT
  invoice_date,
  invoice_id
FROM
  invoices
UNION
ALL
SELECT
  *
FROM
  table_0
UNION
ALL
SELECT
  *
FROM
  table_1
